Code/DBProject/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clinic-management-system-service
  namespace: clinic-management-system
  labels:
    app: clinic-management-system
    tier: web
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: clinic-management-system
